# niche-audio

./: check4sound.py  mailcap  processbutton.py  processrfid.py  pyproject.toml
audio-remote/: config.toml  config_sample.toml  control.py  lmscommander  lmscommander.py  processbutton.py  processgpio.py  processrfid.py  processrotary.py  requirements.txt
audio-remote/urls/: LMSURL.py
config/bash/: alias.bash  bashrc  fzf.bash  lf.bash  startZellij.sh  zellij.bash
config/lf/: lfrc
pcp/: check4sound.sh
piir/: power-on-rme.txt  power.sh  rme.json  voldown-rme.txt  voldown.sh  volup-rme.txt  volup.sh
scripts/: ledit
setup/apt/github/: install.sh
setup/apt/python/: install.sh
setup/audio-remote/: install.sh
setup/bash/: alias.bash  install.sh
setup/check4sound/: check4sound.py  install.sh  requirements.txt  soundcheck.conf
setup/display/: setup.txt
setup/fzf/: fzf.bash  install.sh
setup/lf/: install.sh  lf.bash  lfrc  mailcap
setup/lf/scripts/: lopen  trmpv.sh
setup/vim/: install.sh  vimrc
setup/zellij/: config.kdl  install.sh
squeeze/: lms-play.py  lmscommander  lmsgetplayers.py  next.py  pause.py  play_url.py  radio1.py  shuffle.py  sleep.py  start.py  stop.py  whatsplaying.py
urls/: LMSURL.py
